--- a/helm/templates/frontend/ingress.yaml
+++ b/helm/templates/frontend/ingress.yaml
@@ -7,12 +7,13 @@ metadata:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
     alb.ingress.kubernetes.io/backend-protocol: HTTP
+    alb.ingress.kubernetes.io/ssl-redirect: '443'
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:262194309205:certificate/c19a0b58-ea09-45c4-a757-e0da7901a9c0
 
 spec:
   ingressClassName: alb
-
   rules:
     - host: {{ .Values.frontend.ingress.host }}
       http:
