--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -18,7 +18,7 @@ frontend:
   ingress:
     host: 0209.store
   hpa:
-    enabled: false
+    enabled: true
     minReplicas: 2
     maxReplicas: 5
     cpuUtilization: 50
@@ -48,7 +48,7 @@ backend:
   service:
     type: ClusterIP
   hpa:
-    enabled: false
+    enabled: true
     minReplicas: 2
     maxReplicas: 5
     cpuUtilization: 60
