--- a/helm/templates/backend/hpa.yaml
+++ b/helm/templates/backend/hpa.yaml
@@ -9,7 +9,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "chatapp.fullname" . }}-backend
+    name: {{ include "chatapp.fullname" . }}-django
 
   minReplicas: {{ .Values.backend.hpa.minReplicas }}
   maxReplicas: {{ .Values.backend.hpa.maxReplicas }}
