--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -48,7 +48,7 @@ backend:
   service:
     type: ClusterIP
   hpa:
-    enabled: true
+    enabled: false
     minReplicas: 2
     maxReplicas: 5
     cpuUtilization: 60
