--- a/helm/templates/backend/hpa.yaml
+++ b/helm/templates/backend/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "chatapp.fullname" . }}-django-hpa
+  name: {{ include "chatapp.fullname" . }}-backend-hpa
   labels:
     app: {{ include "chatapp.name" . }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "chatapp.fullname" . }}-django
+    name: {{ include "chatapp.fullname" . }}-backend
 
   minReplicas: {{ .Values.backend.hpa.minReplicas }}
   maxReplicas: {{ .Values.backend.hpa.maxReplicas }}
