--- a/helm/templates/backend/hpa.yaml
+++ b/helm/templates/backend/hpa.yaml
@@ -1,24 +1,19 @@
-{{- if .Values.backend.hpa.enabled }}
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "chatapp.fullname" . }}-backend-hpa
-  labels:
-    app: {{ include "chatapp.name" . }}
+  name: {{ include "chatapp.fullname" . }}-backend
+  namespace: {{ .Release.Namespace }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: {{ include "chatapp.fullname" . }}-backend
-
-  minReplicas: {{ .Values.backend.hpa.minReplicas }}
-  maxReplicas: {{ .Values.backend.hpa.maxReplicas }}
-
+  minReplicas: 2
+  maxReplicas: 5
   metrics:
     - type: Resource
       resource:
         name: cpu
         target:
           type: Utilization
-          averageUtilization: {{ .Values.backend.hpa.cpuUtilization }}
-{{- end }}
+          averageUtilization: 60
