--- a/helm/templates/backend/hpa.yaml
+++ b/helm/templates/backend/hpa.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.backend.hpa.enabled }}
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
@@ -8,13 +9,13 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: {{ include "chatapp.fullname" . }}-backend
-  minReplicas: 2
-  maxReplicas: 5
+  minReplicas: {{ .Values.backend.hpa.minReplicas }}
+  maxReplicas: {{ .Values.backend.hpa.maxReplicas }}
   metrics:
     - type: Resource
       resource:
         name: cpu
         target:
           type: Utilization
-          averageUtilization: 60
-
+          averageUtilization: {{ .Values.backend.hpa.cpuUtilization }}
+{{- end }}
