--- a/helm/templates/backend/hpa.yaml
+++ b/helm/templates/backend/hpa.yaml
@@ -2,15 +2,18 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "chatapp.fullname" . }}-backend
-  namespace: {{ .Release.Namespace }}
+  name: {{ include "chatapp.fullname" . }}-django-hpa
+  labels:
+    app: {{ include "chatapp.name" . }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "chatapp.fullname" . }}-backend
+    name: {{ include "chatapp.fullname" . }}-django
+
   minReplicas: {{ .Values.backend.hpa.minReplicas }}
   maxReplicas: {{ .Values.backend.hpa.maxReplicas }}
+
   metrics:
     - type: Resource
       resource:
