--- a/helm/templates/backend/hpa.yaml
+++ b/helm/templates/backend/hpa.yaml
@@ -2,17 +2,17 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "chatapp.fullname" . }}-django-hpa
+  name: chatapp-django-hpa
   labels:
-    app: {{ include "chatapp.name" . }}
+    app: chatapp
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "chatapp.fullname" . }}-django
+    name: chatapp-backend
 
-  minReplicas: {{ .Values.backend.hpa.minReplicas }}
-  maxReplicas: {{ .Values.backend.hpa.maxReplicas }}
+  minReplicas: 2
+  maxReplicas: 5
 
   metrics:
     - type: Resource
@@ -20,5 +20,5 @@ spec:
         name: cpu
         target:
           type: Utilization
-          averageUtilization: {{ .Values.backend.hpa.cpuUtilization }}
+          averageUtilization: 60
 {{- end }}
