--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -22,7 +22,9 @@ frontend:
     minReplicas: 2
     maxReplicas: 5
     cpuUtilization: 50
+
 # backend configuration values for chatapp
+
 backend:
   replicas: 1
   image: "262194309205.dkr.ecr.eu-west-2.amazonaws.com/chatapp-django:build-59"
@@ -48,11 +50,13 @@ backend:
   service:
     type: ClusterIP
   hpa:
-    enabled: false
+    enabled: true
     minReplicas: 2
     maxReplicas: 5
     cpuUtilization: 60
+
 # database configuration values for chatapp
+
 database:
   replicas: 1
   image: 262194309205.dkr.ecr.eu-west-2.amazonaws.com/chatapp-mysql
