--- a/helm/templates/frontend/hpa.yaml
+++ b/helm/templates/frontend/hpa.yaml
@@ -1,18 +1,18 @@
-{{- if .Values.frontend.hpa.enabled }}
+{{- if .Values.backend.hpa.enabled }}
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "chatapp.fullname" . }}-nginx-hpa
+  name: chatapp-frontend-hpa
   labels:
-    app: {{ include "chatapp.name" . }}
+    app: chatapp
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "chatapp.fullname" . }}-nginx
+    name: chatapp-frontend
 
-  minReplicas: {{ .Values.frontend.hpa.minReplicas }}
-  maxReplicas: {{ .Values.frontend.hpa.maxReplicas }}
+  minReplicas: 2
+  maxReplicas: 5
 
   metrics:
     - type: Resource
@@ -20,5 +20,5 @@ spec:
         name: cpu
         target:
           type: Utilization
-          averageUtilization: {{ .Values.frontend.hpa.cpuUtilization }}
+          averageUtilization: 50
 {{- end }}
